fix main block height on mobile

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -232,10 +232,10 @@
 @media only screen and (max-width: 770px) and (orientation: portrait) {
 	.main {
 		top: 8vh;
-		height: 92vh;
+		height: 75vh;
 	}
 	.main__bg {
-		height: 92vh;
+		height: 75vh;
 	}
 }
 @media only screen and (max-width: 420px) {
