--- a/sass/main.scss
+++ b/sass/main.scss
@@ -668,7 +668,7 @@
 	}
 	.main,
 	.main__bg {
-		height: 92vh;
+		height: 75vh;
 	}
 }
 @media only screen and (max-width: 420px) and (orientation: portrait) {
