--- a/sass/object.scss
+++ b/sass/object.scss
@@ -234,10 +234,10 @@
 @media only screen and (max-width: 770px) and (orientation: portrait) {
 	.main {
 		top: 8vh;
-		height: 92vh;
+		height: 75vh;
 	}
 	.main__bg {
-		height: 92vh;
+		height: 75vh;
 	}
 	.objectGallery__wrap {
 		flex-wrap: wrap;
